--- a/app/templates/patient/detailEtablissement.html
+++ b/app/templates/patient/detailEtablissement.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="text-align: center;">Test</h1>
+    <div>
+        {{etablis.nom_etablissement}}
+        {{etablis.adresse}}
+    </div>
 </body>
 </html>
