--- a/app/templates/patient/createRDV.html
+++ b/app/templates/patient/createRDV.html
@@ -14,11 +14,11 @@
         </div>
         
         <div class="detail-rv">
-          <textarea name="detail" id="detail" cols="30" rows="170" placeholder="Détail"></textarea>
+          <textarea name="detail" id="detail"  placeholder="Détail"></textarea>
         </div>
         
         <div>
-            <textarea name="specialite" id="specialite" cols="30" rows="10"></textarea>
+            <textarea name="specialite" id="specialite" placeholder="specialite"></textarea>
         </div>
        
         <div class="send-rv">
