--- a/app/templates/patient/createRDV.html
+++ b/app/templates/patient/createRDV.html
@@ -16,7 +16,11 @@
         <div class="detail-rv">
           <textarea name="detail" id="detail"  placeholder="Détail"></textarea>
         </div>
-        
+
+        <div class="detail-rv">
+          <input type="date" name="date" id="date" placeholder="Choisizew une date"></input>
+        </div>
+
         <div>
             <textarea name="specialite" id="specialite" placeholder="specialite"></textarea>
         </div>
