--- a/app/templates/patient/createRDV.html
+++ b/app/templates/patient/createRDV.html
@@ -21,8 +21,8 @@
           <input type="date" name="date" id="date" placeholder="Choisizew une date"></input>
         </div>
 
-        <div>
-            <textarea name="specialite" id="specialite" placeholder="specialite"></textarea>
+        <div class="detail-rv">
+          <input type="text" name="specialite" id="specialite" placeholder="specialite" required>
         </div>
        
         <div class="send-rv">
