--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -6,15 +6,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{%static 'style/global.css'%}">
-    <title>Document</title>
+    <link rel="stylesheet" href="{%static 'style/globals.css'%}">
+    <title>{% block titre%}{% endblock%}</title>
 </head>
 <body>
-
+    <!--<div class="nav">
+        <a href="/">Acueil</a>
+        <a href="list-etablissement/">Etablissement</a>
+    </div>-->
+   <div class="header">
+        <nav>
+            <h2 class="logo">Medi <span>SN</span></h2>
+            <a href="/"></a>
+                <ul>
+                    <li><a href="/">ACCUEIL</a></li>
+                    <li><a href="list-etablissement/">ETABLISSEMENTS</a></li>
+                <!--<li><a href="#">CLINIQUES</a></li>--> 
+                    
+                </ul>
+        </nav>
+    </div>
     {% block content %}
         {% block scripts %}
         <main>
-
+           
         </main>
         {% endblock %}
     {% endblock content%}
