--- a/app/templates/patient/listEtablissement.html
+++ b/app/templates/patient/listEtablissement.html
@@ -1,22 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div>
-        <ul>
-            {%for item  in etablissements%}
-            <li>
-                <a href="{% url 'detail_etablis' item.id%}">
-                    {{item.nom_etablissement}}
-                </a>
-            </li>
-            {%endfor%}
-        </ul>
+{% extends '_base.html'%}
+
+{% block titre%}Etablissements {% endblock%}
+
+
+    {% block scripts %}
+    <div class="list">   
+        <div class="etab">
+             
+                <ul>
+                    {%for item  in etablissements%}
+                    <li>
+                        <a href="{% url 'detail_etablis' item.id%}">
+                           <h3>
+                            {{item.nom_etablissement}}
+                           </h3> 
+                        </a>
+                    </li>
+                    {%endfor%}
+                </ul>
+            
+           
+        </div>
     </div>
-</body>
-</html>
+    {% endblock %}
