--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{%static 'style/globals.css'%}">
+    <link rel="stylesheet" href="{%static 'style/Global.css'%}">
+    <link rel="stylesheet" href="{%static 'style/home.css'%}">
     <title>{% block titre%}{% endblock%}</title>
 </head>
 <body>
@@ -14,9 +15,8 @@
         <a href="/">Acueil</a>
         <a href="list-etablissement/">Etablissement</a>
     </div>-->
-   <div class="header">
-        <nav>
-            <h2 class="logo">Medi <span>SN</span></h2>
+   <div class="header-div">
+        <nav> <h2 class="logo">Medi <span>SN</span></h2>
             <a href="/"></a>
                 <ul>
                     <li><a href="/">ACCUEIL</a></li>
