--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block scripts %}
 
-<div class="header">
+<section class="header-sec">
     <div class="header-content">
         <h1>Medi Sn</h1>
         <p>Votre santé, notre priorité : Trouvez, Réservez, Soignez</p>
@@ -14,9 +14,10 @@
             <button type="submit"><img src="image/search.png"></button>
         </form>
     </div>
-</div>
+</section>
+
 <!----------Service--------->
-<div class="service" >
+<section class="service" >
 
     <h1 class="heading">Services Offert</h1>
     <p>Lorem ipsum dolor sit, amet  .</p>
@@ -46,9 +47,11 @@
                 um doloribus hic in expedita quisquam dicta itaque, vitae distinctio est vero beatae doloremque vo. Sequi, cum.</p>
             <a href="#" class="btn">Acceder</a>
         </div>
-        
     </div>
+</section>
 
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3859.9059463742124!2d-17.437353724951667!3d14.661278685832222!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xec172350c61654f%3A0xc8bb77267bd374f8!2sHopital%20Principal%20de%20Dakar!5e0!3m2!1sfr!2ssn!4v1687558126956!5m2!1sfr!2ssn"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 
 {% endblock %}
